run voter for all existing models

--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,8 @@
     "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
     "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
     "text = pd.read_csv('data/text.csv', index_col='id', dtype={'type': str})\n",
+    "train_text = pd.read_csv('data/train_text.csv', index_col='id', dtype={'type': str})\n",
+    "test_text = pd.read_csv('data/test_text.csv', index_col='id', dtype={'type': str})\n",
     "#babbage = pd.read_csv('data/embedded_1k_reviews.csv', index_col='id', dtype={'type': str})\n",
     "#curie = pd.read_csv('data/curie.csv', dtype={'type': str})"
    ]
@@ -325,16 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = text.copy()"
+    "data = train_text.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +400,7 @@
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,31 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "Int64Index: 20000 entries, 232170 to 2781747\n",
-      "Series name: text_features\n",
-      "Non-Null Count  Dtype \n",
-      "--------------  ----- \n",
-      "14900 non-null  object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 312.5+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "prep.text_features.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -498,9 +476,11 @@
        "      <th></th>\n",
        "      <th>text_features</th>\n",
        "      <th>type</th>\n",
+       "      <th>source</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -510,26 +490,31 @@
        "      <th>232170</th>\n",
        "      <td>Kuno Areng, Bremerhaven Festwoche medal    Festwoche - Breemenhaven KUTTER ASTARTE -SCHIFFERGILDE BREMENHAVEN E.V.</td>\n",
        "      <td>medal</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2251378</th>\n",
        "      <td>Photo-Villem Kapp, photo with dedication to Armilde M, 1937   Photos from the collection of Villem Kapi and Juhan Aavik\\ndesse, purchased in 2013</td>\n",
        "      <td>photo</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4085096</th>\n",
        "      <td>Metspart, Youth Theater, 1969, in parts: Hedvig - Mari Lill, Gina - Silvia Laidla    TB080321</td>\n",
        "      <td>photo negative</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2697904</th>\n",
        "      <td>Letter: Folk musicians: Violin: Jüri Saal: Letter to A. Pulst: 16.02.1936   Folk instrumentalists Mo238</td>\n",
        "      <td>letter</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2521183</th>\n",
        "      <td>killing    treasures in a metal container</td>\n",
        "      <td>coin</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -544,16 +529,16 @@
        "2697904                                            Letter: Folk musicians: Violin: Jüri Saal: Letter to A. Pulst: 16.02.1936   Folk instrumentalists Mo238   \n",
        "2521183                                                                                                          killing    treasures in a metal container   \n",
        "\n",
-       "                   type  \n",
-       "id                       \n",
-       "232170            medal  \n",
-       "2251378           photo  \n",
-       "4085096  photo negative  \n",
-       "2697904          letter  \n",
-       "2521183            coin  "
+       "                   type source  \n",
+       "id                              \n",
+       "232170            medal  train  \n",
+       "2251378           photo  train  \n",
+       "4085096  photo negative  train  \n",
+       "2697904          letter  train  \n",
+       "2521183            coin  train  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,19 +549,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'source'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/till/projects/uni/data science/museum_item_classification/nlp.ipynb Cell 28\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m true_counter \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, item \u001b[39min\u001b[39;00m data\u001b[39m.\u001b[39miterrows():\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mif\u001b[39;00m item\u001b[39m.\u001b[39;49msource \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         local_counter \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/nlp.ipynb#X35sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         pred \u001b[39m=\u001b[39m []\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/generic.py:5907\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5900\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   5901\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[1;32m   5902\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[1;32m   5903\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[1;32m   5904\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5905\u001b[0m ):\n\u001b[1;32m   5906\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[0;32m-> 5907\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'source'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "multiple types in text - one type in text - one type and true type in text\n",
+      "0 0 1821\n"
      ]
     }
    ],
@@ -584,24 +565,30 @@
     "multi_counter = 0\n",
     "one_counter = 0\n",
     "true_counter = 0\n",
-    "for i, item in data.iterrows():\n",
-    "    if item.source == 'train':\n",
-    "        local_counter = 0\n",
-    "        pred = []\n",
-    "        for type in types:            \n",
-    "            if type in item.text_features:\n",
-    "                local_counter += 1\n",
-    "                pred.append(type)                \n",
-    "\n",
-    "        if local_counter > 1:\n",
-    "            multi_counter += 1\n",
-    "        if local_counter == 1:\n",
-    "            one_counter += 1\n",
-    "            if pred[0] == item.type:           \n",
+    "for i, item in data.iterrows():    \n",
+    "    local_counter = 0\n",
+    "    pred = []\n",
+    "    for type in types:            \n",
+    "        if type in item.text_features:\n",
+    "            local_counter += 1\n",
+    "            pred.append(type)\n",
+    "    if ('drawing' in item.text_features) or ('sketch' in item.text_features) or ('design' in item.text_features):\n",
+    "        pred.append('design/drawing/sketch')\n",
+    "        local_counter += 1\n",
+    "    if local_counter > 0:\n",
+    "        if pred[-1] == item.type:           \n",
     "                true_counter += 1\n",
-    "            else:\n",
-    "                #print(pred, item.type) \n",
-    "                pass\n",
+    "    \"\"\"\n",
+    "    if local_counter > 1:\n",
+    "        multi_counter += 1\n",
+    "    if local_counter == 1:\n",
+    "        one_counter += 1\n",
+    "        if pred[0] == item.type:           \n",
+    "            true_counter += 1\n",
+    "        else:\n",
+    "            #print(pred, item.type) \n",
+    "            pass\n",
+    "    \"\"\"\n",
     "\n",
     "print('multiple types in text - one type in text - one type and true type in text')\n",
     "print(multi_counter, one_counter, true_counter)\n",
