--- a/neural_networks.ipynb
+++ b/neural_networks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +303,77 @@
    ],
    "source": [
     "clf.save_model('models/nn/first_try')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# submission\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/till/.local/lib/python3.10/site-packages/pytorch_tabnet/abstract_model.py:75: UserWarning: Device used : cpu\n",
+      "  warnings.warn(f\"Device used : {self.device}\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn = TabNetClassifier()\n",
+    "nn.load_model('models/nn/full_ds.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set = test_prep.drop('type', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = pd.DataFrame({'id': test_set.index ,'type': nn.predict(test_set.values)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_lookup = pd.read_csv('data/type_lookup.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission.to_csv('submissions/full_tabnet.csv', index=False)"
    ]
   }
  ],
