--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -118,6 +118,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# sweeping"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -22860,9 +22867,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bst' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/till/projects/uni/data science/museum_item_classification/random_forest.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m results \u001b[39m=\u001b[39m bst\u001b[39m.\u001b[39mpredict(test_set)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bst' is not defined"
+     ]
+    }
+   ],
    "source": [
     "results = bst.predict(test_set)"
    ]
@@ -22900,7 +22919,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv('data/submission.csv', index=False)"
+    "submission.to_csv('submission/some_rf_model.csv', index=False)"
    ]
   }
  ],
