--- a/voter.ipynb
+++ b/voter.ipynb
@@ -430,25 +430,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results['prediction'] = results.apply(lambda row: vote([row.xg,row.rf,row.nn,row.words,row.emb]), axis=1)"
+    "results['prediction'] = results.apply(lambda row: vote([row.xg,row.rf,row.words,row.emb]), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9130952380952381"
+       "0.9157142857142857"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
