--- a/random_forest_balanced.ipynb
+++ b/random_forest_balanced.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +55,8 @@
     "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
     "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
     "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
-    "train_prepROS = pd.read_csv('data/train_prepROS.csv', index_col='id', dtype={'type': str})\n",
-    "train_prepSMOTE = pd.read_csv('data/train_prepSMOTE.csv', index_col='id', dtype={'type': str})\n"
+    "train_prepROS = pd.read_csv('data/train_prepROS.csv')\n",
+    "train_prepSMOTE = pd.read_csv('data/train_prepSMOTE.csv')\n"
    ]
   },
   {
@@ -68,20 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = train_prepSMOTE.copy()\n",
+    "data.drop(columns=['Unnamed: 0'], inplace=True, axis = 1)\n",
     "\n",
     "features = data.drop('type', axis=1)\n",
     "labels = data.type\n",
     "# at least xgboost cannot deal with string labels\n",
-    "label_encoder = LabelEncoder()\n",
-    "label_encoder = label_encoder.fit(labels)\n",
-    "labels = label_encoder.transform(labels)\n",
+    "#label_encoder = LabelEncoder()\n",
+    "#label_encoder = label_encoder.fit(labels)\n",
+    "#labels = label_encoder.transform(labels)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.00001, random_state=0)"
+    "#X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.00001, random_state=0)"
    ]
   },
   {
@@ -93,30 +94,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.984284591756554 1.0\n"
-     ]
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(n_estimators=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_estimators=1000)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "RandomForestClassifier(n_estimators=1000)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "rfc = RandomForestClassifier(n_estimators=1000)\n",
-    "rfc.fit(X_train, y_train)\n",
+    "rfc.fit(features, labels)\n",
     "\n",
-    "y_pred = rfc.predict(X_test)\n",
-    "probs = rfc.predict_proba(X_test)\n",
-    "val_acc = accuracy_score(y_test, y_pred)\n",
+    "#y_pred = rfc.predict(X_test)\n",
+    "#probs = rfc.predict_proba(X_test)\n",
+    "#val_acc = accuracy_score(y_test, y_pred)\n",
     "\n",
-    "y_pred = rfc.predict(X_train)\n",
-    "probs = rfc.predict_proba(X_train)\n",
-    "train_acc = accuracy_score(y_train, y_pred)\n",
+    "#y_pred = rfc.predict(X_train)\n",
+    "#probs = rfc.predict_proba(X_train)\n",
+    "#train_acc = accuracy_score(y_train, y_pred)\n",
     "\n",
-    "print(train_acc, val_acc)"
+    "#print(train_acc, val_acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# submission (taken from xgboost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set = test_prep.drop('type', axis=1)\n",
+    "results = rfc.predict(test_set)\n",
+    "submission = pd.DataFrame({'id': test_set.index ,'type': rfc.predict(test_set)})\n",
+    "type_lookup = pd.read_csv('data/type_lookup.csv')\n",
+    "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())\n",
+    "submission.to_csv('submissions/submission_rf_full_SMOTE.csv', index=False)"
    ]
   },
   {
@@ -22842,13 +22870,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump(rfc, open('./models/rf/first_try', 'wb'))\n",
-    "loaded_model = pickle.load(open('./models/rf/first_try', 'rb'))"
+    "pickle.dump(rfc, open('./models/rf/rf_full_SMOTE', 'wb'))\n",
+    "loaded_model = pickle.load(open('./models/rf/rf_full_SMOTE', 'rb'))"
    ]
   },
   {
@@ -22860,7 +22888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22869,25 +22897,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = bst.predict(test_set)"
+    "results = rfc.predict(test_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission = pd.DataFrame({'id': test_set.index ,'type': bst.predict(test_set)})"
+    "submission = pd.DataFrame({'id': test_set.index ,'type': rfc.predict(test_set)})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22896,7 +22924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22905,11 +22933,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv('data/submission.csv', index=False)"
+    "submission.to_csv('submissions/submission_rf_full_SMOTE.csv', index=False)"
    ]
   }
  ],
