identify important words per type

--- a/xgboost_tries.ipynb
+++ b/xgboost_tries.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.0001, random_state=0)"
    ]
   },
   {
@@ -144,6 +144,15 @@
    "outputs": [],
    "source": [
     "bst.save_model('models/xg/xgboost_full.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdfdsfsd"
    ]
   },
   {
