--- a/voter.ipynb
+++ b/voter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -83,16 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = train_prep.copy()"
+    "#data = train_prep.copy()\n",
+    "data = test_prep.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,22 +107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)"
+    "#X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\n",
+    "X_test = data.drop('type', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "results = pd.DataFrame()\n",
     "results['id'] = X_test.index\n",
-    "results['type'] = y_test\n",
+    "#results['type'] = y_test\n",
     "\n",
     "results['rf'] = rf.predict(X_test)\n",
     "results['nn'] = nn.predict(X_test.values)\n",
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,28 +160,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nlabels = df.type\\n# at least xgboost cannot deal with string labels\\nlabel_encoder = LabelEncoder()\\nlabel_encoder = label_encoder.fit(labels)\\nlabels = label_encoder.transform(labels)\\nX_train, emb_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\\n'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "boost_emb = XGBClassifier()\n",
     "boost_emb.load_model('models/nlp/xgboost.json')\n",
     "\n",
-    "df = pd.read_csv('data/train_curie.csv', index_col='id', dtype={'type': str})\n",
+    "#df = pd.read_csv('data/train_curie.csv', index_col='id', dtype={'type': str})\n",
+    "df = pd.read_csv('data/test_curie.csv', index_col='id', dtype={'type': str})\n",
     "df['curie_similarity'] = df.curie_similarity.apply(eval).apply(np.array)\n",
     "\n",
     "features = list(df.curie_similarity.values)\n",
+    "\"\"\"\n",
     "labels = df.type\n",
     "# at least xgboost cannot deal with string labels\n",
     "label_encoder = LabelEncoder()\n",
     "label_encoder = label_encoder.fit(labels)\n",
     "labels = label_encoder.transform(labels)\n",
-    "X_train, emb_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\n"
+    "X_train, emb_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\n",
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -315,11 +331,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>type</th>\n",
        "      <th>rf</th>\n",
        "      <th>nn</th>\n",
        "      <th>xg</th>\n",
-       "      <th>prediction</th>\n",
        "      <th>words</th>\n",
        "      <th>emb</th>\n",
        "    </tr>\n",
@@ -330,76 +344,64 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2080460</th>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2773190</th>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
+       "      <th>2652198</th>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
        "      <td>-2</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3195806</th>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
+       "      <th>3851731</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3671158</th>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>12</td>\n",
+       "      <th>1211338</th>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "      <td>3</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4092912</th>\n",
-       "      <td>43</td>\n",
-       "      <td>43</td>\n",
-       "      <td>43</td>\n",
-       "      <td>43</td>\n",
-       "      <td>43</td>\n",
+       "      <th>231244</th>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
        "      <td>-2</td>\n",
-       "      <td>43</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2523607</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         type  rf  nn  xg  prediction  words  emb\n",
-       "id                                               \n",
-       "2080460    37  37  37  37          37     -2   37\n",
-       "2773190    37  37  37  37          37     -2   -1\n",
-       "3195806    11  11  11  11          11     11   11\n",
-       "3671158    12  12  12  12          12     -2   12\n",
-       "4092912    43  43  43  43          43     -2   43"
+       "         rf  nn  xg  words  emb\n",
+       "id                             \n",
+       "2652198  36  36  36     -2   -1\n",
+       "3851731  22  22  22     -2    1\n",
+       "1211338  52  52  52      3   31\n",
+       "231244   21  21  21     -2   50\n",
+       "2523607   8   8   8     -2    8"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,23 +441,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#accuracy_score(results.type, results.prediction)\n",
+    "#0.9038095238095238\n",
+    "#0.9157142857142857"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rf</th>\n",
+       "      <th>nn</th>\n",
+       "      <th>xg</th>\n",
+       "      <th>words</th>\n",
+       "      <th>emb</th>\n",
+       "      <th>prediction</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2652198</th>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3851731</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1211338</th>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "      <td>3</td>\n",
+       "      <td>31</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231244</th>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>50</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2523607</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.9157142857142857"
+       "         rf  nn  xg  words  emb  prediction\n",
+       "id                                         \n",
+       "2652198  36  36  36     -2   -1          36\n",
+       "3851731  22  22  22     -2    1          22\n",
+       "1211338  52  52  52      3   31          52\n",
+       "231244   21  21  21     -2   50          21\n",
+       "2523607   8   8   8     -2    8           8"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(results.type, results.prediction)\n",
-    "#0.9038095238095238"
+    "results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = pd.DataFrame({'id': results.index ,'type': results.prediction})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_lookup = pd.read_csv('data/type_lookup.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "submission.to_csv('submissions/voter_1.csv', index=False)"
    ]
   }
  ],
