submission with type indicated by freq words

--- a/voter.ipynb
+++ b/voter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -77,13 +77,12 @@
     "xgb.load_model('models/xg/xgboost_full.json')\n",
     "rf = pickle.load(open('./models/rf/first_try', 'rb'))\n",
     "nn = TabNetClassifier()\n",
-    "nn.load_model('models/nn/first_try.zip')\n",
-    "#emb "
+    "nn.load_model('models/nn/first_try.zip')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results['words'] = [-2] * len(results)"
+    "results['words'] = [-1] * len(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +168,7 @@
        "'\\nlabels = df.type\\n# at least xgboost cannot deal with string labels\\nlabel_encoder = LabelEncoder()\\nlabel_encoder = label_encoder.fit(labels)\\nlabels = label_encoder.transform(labels)\\nX_train, emb_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\\n'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +249,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# categorize types\n",
+    "types = [\n",
+    "'sculpture',\\\n",
+    "'bag', 'suit', 'doll', 'sheet/linen', 'dish/vessel','jewel', 'tape/ribbon',\\\n",
+    "'country',\\\n",
+    "'paper','book','magazines', 'album', 'newspaper', 'folder/booklet',\\\n",
+    "'invitation',  'calendar',\\\n",
+    "'audio recording', 'telegram',\\\n",
+    "'packaging', 'crate/box',\\\n",
+    "'printed notes', 'small print',\\\n",
+    "'seal', 'seal/imprint',\\\n",
+    "'letter','letter of honor/honorary address',\\\n",
+    "'postcard', 'photo, postcard', 'letter, postcard',\\\n",
+    "'manuscript','script, song/vocal music', 'music sheet', 'musical instrument', 'manuscript, musical composition', 'manuscript, sheet music',\\\n",
+    "'medal', 'coin', 'label/sign',\\\n",
+    "'poster','plan','notes', 'document', 'certificate',\\\n",
+    "'graphics', 'drawing', 'design/drawing/sketch','caricature','slide',\\\n",
+    "'archaeological find',\\\n",
+    "'photo', 'photo negative', 'photographic negative, photographic negative', 'photographic material','digital image'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,21 +291,54 @@
     "    if len(pred) > 0:\n",
     "        return pred[-1]\n",
     "    else:\n",
-    "        return -2\n"
+    "        return -1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['filter'] = df.text_features.apply(filtering)"
+    "type_indicators = {}\n",
+    "with open('data/type_ind_cut.txt', 'r') as f:\n",
+    "    for line in f:\n",
+    "        a = line.split('\\'')\n",
+    "        type = a[1]\n",
+    "        indicators = a[2].split()\n",
+    "        type_indicators[type] = indicators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def indicating(text):\n",
+    "    pred = []\n",
+    "    for type in types:\n",
+    "        for indicator in type_indicators[type]:\n",
+    "            if indicator in text:\n",
+    "                pred.append(type)\n",
+    "    if len(pred) > 0:\n",
+    "        return pred[-1]\n",
+    "    else:\n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['filter'] = df.text_features.apply(indicating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,16 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['filter'] = df['filter'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -2 else -2)"
+    "df['filter'] = df['filter'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +412,7 @@
        "      <td>36</td>\n",
        "      <td>36</td>\n",
        "      <td>36</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -360,7 +420,7 @@
        "      <td>22</td>\n",
        "      <td>22</td>\n",
        "      <td>22</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -368,7 +428,7 @@
        "      <td>52</td>\n",
        "      <td>52</td>\n",
        "      <td>52</td>\n",
-       "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -376,7 +436,7 @@
        "      <td>21</td>\n",
        "      <td>21</td>\n",
        "      <td>21</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>45</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -384,7 +444,7 @@
        "      <td>8</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -394,14 +454,14 @@
       "text/plain": [
        "         rf  nn  xg  words  emb\n",
        "id                             \n",
-       "2652198  36  36  36     -2   -1\n",
-       "3851731  22  22  22     -2    1\n",
-       "1211338  52  52  52      3   31\n",
-       "231244   21  21  21     -2   50\n",
-       "2523607   8   8   8     -2    8"
+       "2652198  36  36  36     -1   -1\n",
+       "3851731  22  22  22     -1    1\n",
+       "1211338  52  52  52      8   31\n",
+       "231244   21  21  21     45   50\n",
+       "2523607   8   8   8      8    8"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,20 +479,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "from statistics import mode\n",
     "def vote(predictions):\n",
     "    if -1 in predictions: predictions.remove(-1)\n",
-    "    if -2 in predictions: predictions.remove(-2)\n",
     "    return mode(predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,13 +500,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "#accuracy_score(results.type, results.prediction)\n",
     "#0.9038095238095238\n",
-    "#0.9157142857142857"
+    "#0.9157142857142857\n",
+    "#0.9130952380952381\n",
+    "#0.9145238095238095"
    ]
   },
   {
@@ -459,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +567,7 @@
        "      <td>36</td>\n",
        "      <td>36</td>\n",
        "      <td>36</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
@@ -515,7 +576,7 @@
        "      <td>22</td>\n",
        "      <td>22</td>\n",
        "      <td>22</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
@@ -524,7 +585,7 @@
        "      <td>52</td>\n",
        "      <td>52</td>\n",
        "      <td>52</td>\n",
-       "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "      <td>31</td>\n",
        "      <td>52</td>\n",
        "    </tr>\n",
@@ -533,7 +594,7 @@
        "      <td>21</td>\n",
        "      <td>21</td>\n",
        "      <td>21</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>45</td>\n",
        "      <td>50</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
@@ -542,7 +603,7 @@
        "      <td>8</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -553,14 +614,14 @@
       "text/plain": [
        "         rf  nn  xg  words  emb  prediction\n",
        "id                                         \n",
-       "2652198  36  36  36     -2   -1          36\n",
-       "3851731  22  22  22     -2    1          22\n",
-       "1211338  52  52  52      3   31          52\n",
-       "231244   21  21  21     -2   50          21\n",
-       "2523607   8   8   8     -2    8           8"
+       "2652198  36  36  36     -1   -1          36\n",
+       "3851731  22  22  22     -1    1          22\n",
+       "1211338  52  52  52      8   31          52\n",
+       "231244   21  21  21     45   50          21\n",
+       "2523607   8   8   8      8    8           8"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,20 +659,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "submission.to_csv('submissions/voter_1.csv', index=False)"
+    "submission.to_csv('submissions/voter_with_text_ind.csv', index=False)"
    ]
   }
  ],
