rm [] from new thres prep

--- a/prep_final.ipynb
+++ b/prep_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,11 @@
     "combined_data = pd.read_csv('data/combined_data.csv', index_col='id', dtype={'type': str})\n",
     "combined_data_translated = pd.read_csv('data/combined_data_translated.csv', index_col='id', dtype={'type': str})\n",
     "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})\n",
-    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})"
+    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
+    "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
+    "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
+    "low = pd.read_csv('data/prep_low_thres.csv', index_col='id', dtype={'type': str})\n",
+    "high = pd.read_csv('data/prep_high_thres.csv', index_col='id', dtype={'type': str})"
    ]
   },
   {
@@ -290,25 +294,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = prep.copy()"
+    "data = low.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "80 columns found that start with technique_\n",
-      "80 columns found that start with material_\n",
-      "149 columns found that start with location_\n"
+      "82 columns found that start with technique_\n",
+      "84 columns found that start with material_\n",
+      "74 columns found that start with location_\n"
      ]
     }
    ],
