--- a/prep_final.ipynb
+++ b/prep_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = prep.copy()"
+    "data = high.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('data/prep.csv')"
+    "data.to_csv('data/prep_high_thres.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = low.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in data.columns:\n",
+    "    if '>' in i:\n",
+    "        data.rename(columns={i:i.replace('>','')}, inplace=True)\n",
+    "for i in data.columns:\n",
+    "    if '<' in i:\n",
+    "        data.rename(columns={i:i.replace('<','')}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data/prep_low_thres.csv')"
    ]
   },
   {
