--- a/rebalancing.ipynb
+++ b/rebalancing.ipynb
@@ -1,12 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Rebalancing\n",
     "\n",
-    "- using different algorithms to rebalance our data"
+    "- using different algorithms to rebalance our data\n",
+    "- .csv- files are only to be used if whole dataset is to be implemented without split"
    ]
   },
   {
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,16 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from collections import Counter\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,8 +103,8 @@
     "    b = list(b)\n",
     "\n",
     "    for i in range(len(a)):\n",
-    "        if b[i] < 500 :\n",
-    "            b[i] = 500\n",
+    "        if b[i] < 100 :\n",
+    "            b[i] = 100\n",
     "    return dict(zip(a, b))"
    ]
   },
@@ -7366,15 +7369,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_items([(29, 500), (36, 3747), (37, 2201), (22, 631), (8, 500), (21, 500), (45, 500), (30, 500), (50, 500), (1, 789), (4, 528), (41, 771), (42, 500), (48, 500), (43, 774), (11, 837), (2, 500), (26, 500), (14, 500), (6, 500), (18, 500), (54, 500), (27, 500), (33, 500), (51, 500), (19, 500), (34, 500), (35, 500), (28, 500), (25, 500), (0, 500), (9, 500), (12, 500), (38, 500), (39, 500), (16, 500), (10, 500), (23, 500), (5, 500), (53, 500), (3, 500), (32, 500), (13, 500), (31, 500), (24, 500), (46, 500), (44, 500), (47, 500), (52, 500), (7, 500), (49, 500), (17, 500), (20, 500), (15, 500), (40, 500)])\n",
-      "(33778, 808)\n"
+      "dict_items([(29, 100), (36, 3747), (37, 2201), (22, 631), (8, 192), (21, 100), (45, 189), (30, 210), (50, 100), (1, 789), (4, 528), (41, 771), (42, 156), (48, 196), (43, 774), (11, 837), (2, 100), (26, 479), (14, 450), (6, 100), (18, 225), (54, 100), (27, 100), (33, 100), (51, 107), (19, 100), (34, 100), (35, 100), (28, 100), (25, 104), (0, 100), (9, 100), (12, 187), (38, 100), (39, 100), (16, 100), (10, 100), (23, 100), (5, 100), (53, 100), (3, 100), (32, 100), (13, 100), (31, 100), (24, 100), (46, 100), (44, 100), (47, 100), (52, 100), (7, 100), (49, 100), (17, 100), (20, 100), (15, 100), (40, 100)])\n",
+      "(16373, 808)\n"
      ]
     }
    ],
@@ -7389,12 +7392,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "dataSMOTE.to_csv('data/train_prepSMOTE.csv')"
+    "dataSMOTE.to_csv('data/train_prepSMOTE100.csv')"
    ]
   },
   {
@@ -7432,7 +7435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -7446,12 +7449,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "7e5fc957e2145bdb6dcd6f004ae476467743f40bdc9351c87f25ceab537debc6"
    }
   }
  },
